--- a/public/index.html
+++ b/public/index.html
@@ -12,20 +12,57 @@
 
 <body>
   <h1>Websockets App</h1>
-  <h2>Chat</h2>
 
-  <form id="form-message" style="margin-left: 20%; width: 60%;">
-    <div class="form-group">
-      <input type="text" class="form-control" id="author" placeholder="nombre">
-    </div>
-    <div class="form-group">
-      <label for="message">Mensaje:</label>
-      <textarea class="form-control" id="message" rows="3"></textarea>
-    </div>
-    <button type="submit" class="btn btn-success" id="send-btn">Enviar</button>
-  </form>
+  <div class="container-fluid" style="margin-bottom: 10vh">
+    <form action="http://localhost:8088/" method="POST"
+      style="max-width: 40%; text-align: center; margin-left: 30%;" enctype="application/x-www-form-urlencoded"
+      name="form">
+      <h1>Carga de datos</h1>
+      <div class="input-group input-group-sm mb-3">
+        <div class="input-group-prepend">
+          <span class="input-group-text" id="inputGroup-sizing-sm">Title</span>
+        </div>
+        <input name="title" type="text" class="form-control" aria-label="Sizing example input"
+          aria-describedby="inputGroup-sizing-sm">
+      </div>
 
-  <div id="message-container" style="margin: 1vh;"></div>
+      <div class="input-group input-group-sm mb-3">
+        <div class="input-group-prepend">
+          <span class="input-group-text" id="inputGroup-sizing-sm">Price</span>
+        </div>
+        <input name="price" type="text" class="form-control" aria-label="Sizing example input"
+          aria-describedby="inputGroup-sizing-sm">
+      </div>
+
+      <div class="input-group input-group-sm mb-3">
+        <div class="input-group-prepend">
+          <span class="input-group-text" id="inputGroup-sizing-sm">Thumbnail</span>
+        </div>
+        <input name="thumbnail" type="text" class="form-control" aria-label="Sizing example input"
+          aria-describedby="inputGroup-sizing-sm">
+      </div>
+
+      <button type="submit" class="btn btn-primary">Submit</button>
+
+    </form>
+  </div>
+
+  <div class="container-fluid" style="margin-bottom: 10vh" id="products-container"></div>
+
+  <div class="container-fluid" style="margin-bottom: 10vh">
+    <h2 style="text-align: center;" >Chat</h2>
+    <form id="form-message" style="margin-left: 20%; width: 60%;">
+      <div class="form-group">
+        <input type="email" class="form-control" id="author" placeholder="email" required>
+      </div>
+      <div id="message-container" style="margin: 1vh;"></div>
+      <div class="form-group">
+        <label for="message">Mensaje:</label>
+        <textarea class="form-control" id="message" rows="3" required></textarea>
+      </div>
+      <button type="submit" class="btn btn-success" id="send-btn">Enviar</button>
+    </form>
+  </div>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -33,6 +70,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
     crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
   <script src="main.js"></script>
 </body>
 
